Change CI workdir

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,9 +13,11 @@ jobs:
       - name: Type checking
         uses: microsoft/action-python@0.7.3
         with:
+          workdir: .
           pyright: true
 
       - name: Linting
         uses: microsoft/action-python@0.7.3
         with:
+          workdir: .
           pylint: true
